Fix calendar on tablets

--- a/client/scss/calendar.scss
+++ b/client/scss/calendar.scss
@@ -136,8 +136,28 @@ $eventBoxHeight: 20px;
           margin-top: 0;
         }
 
+        &:nth-child(2n+1) {
+          margin-left: 0;
+        }
+
+        &:nth-child(n+3) {
+          margin-top: 5px;
+        }
+      }
+    }
+
+    @media screen and (min-width: $mediumBreakPoint) {
+      li {
+        &:nth-child(2n+1) {
+          margin-left: 3px;
+        }
+
         &:nth-child(3n+1) {
           margin-left: 0;
+        }
+
+        &:nth-child(n+3) {
+          margin-top: 0;
         }
 
         &:nth-child(n+4) {
